[package]
name = "elastic_log_clearance"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] } 
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
flexi_logger = "0.27.4"
log = "0.4.20"
chrono = "0.4.31"
chrono-tz = "0.9.0"
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
async-trait = "0.1.83"
getset = "0.1.2"
derive-new = "0.6.0"
once_cell = "1.20.2"
regex = "1.11.0"